deploy: 2392afbad06680d20f78cee373b55150b0b4aa3f

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-1117f892d64ca353.css" integrity="sha384&#x2D;u03pDQ6GApwZzJ&#x2B;SCEKrGBTgnHhhvi4dS&#x2F;ZYz&#x2F;1uxdxBbNsHgRpTNCnXtyd2cLc&#x2F;"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-f4bc2a6493d88095.css" integrity="sha384&#x2D;s0AXQGUnqiukFe8fvNkwwBFbJ5ST21u8gO3ZVKwq3c7XbR9OJN2droXiMLP1JgV9"/>
         
         
-<script type="module" nonce="52R+tyLnnUtm9Va9ZR7e8Q==">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-6d85ce03644b9fba.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-6d85ce03644b9fba_bg.wasm' });
+<script type="module">
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-9da9a84eb419e4d7.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-9da9a84eb419e4d7_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-6d85ce03644b9fba.js" crossorigin=anonymous integrity="sha384-AeNkNFtJGSOQOlpsy9whNZv2s2O8wIoqpEB6uZmGrQJxr3o647vJnCj3mpMb78OT"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin=anonymous integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-6d85ce03644b9fba_bg.wasm" crossorigin=anonymous integrity="sha384-KGGsvA7wO7okrMFxtHnpEzZ/uxbCe1a7Vz3u2k0UulJf12kVOluNLKCo7swH5NnM" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-9da9a84eb419e4d7.js" crossorigin="anonymous" integrity="sha384-tmk5LeiGkIXfurs+fT3du7gBREwoo8Mf6XbRN1ifGXltlqIUZ6cUOwovrwhSifTM"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-9da9a84eb419e4d7_bg.wasm" crossorigin="anonymous" integrity="sha384-f4Tr74gtWwvoPRYwI0dXTRTA8yvBct4EpDqhyPPhGHZVmrJi7LWblX+Zhve72jNb" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
