--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-6d7beab6ba3c83d6.css" integrity="sha384&#x2D;RkSONXcjRmv3hm6u9Xp&#x2F;tJ1V&#x2B;KnqVmgDkWYWWx0IBwSu5ZMdm4ltyQ18S47BI5JM"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-c192bf3bb741ff17.css" integrity="sha384&#x2D;PJCxt8ycwbgXFlK3HQfrGPogo39ReutQpahSvGcDgB9wfFqoar0U2&#x2B;w1OSVy124Z"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-7e8e12226f3d339.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-7e8e12226f3d339_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-9e538cc67be78dde.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-9e538cc67be78dde_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-7e8e12226f3d339.js" crossorigin="anonymous" integrity="sha384-/wETEdBbk98eO4rMKBdKkofc6JYspdvx5adU4OGPJIfdfoy4nOrU2e5KRL53ouE+"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-7e8e12226f3d339_bg.wasm" crossorigin="anonymous" integrity="sha384-Sm4s73pX+8KjWJgOKAUPu4sa1KOH9i6KZHun2Mn9uasVE/gKg3TF/iGfziLalVTp" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-9e538cc67be78dde.js" crossorigin="anonymous" integrity="sha384-xg8j7ImOySIXgTyKM/z42xJCJJLVo3a/RAAXVTv6f+ZLIz0wCxWqoPMTWcPopWOR"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-9e538cc67be78dde_bg.wasm" crossorigin="anonymous" integrity="sha384-hhLtn5IpB4/FC4QNcnaPWraHVRqCS46Rb0wDbnk4NqdYWsUGqoqSSL6BWGKSPL2y" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
