--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-c192bf3bb741ff17.css" integrity="sha384&#x2D;PJCxt8ycwbgXFlK3HQfrGPogo39ReutQpahSvGcDgB9wfFqoar0U2&#x2B;w1OSVy124Z"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-9b5e9d237f10f8e6.css" integrity="sha384&#x2D;g2cRO3DzrXU&#x2F;DWh75LMsrC80TpOlybI&#x2B;IoaLK8lSGgxWWLGueT6y&#x2B;TLifaht9uPP"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-76aa3cd411e9363b.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-76aa3cd411e9363b_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-76aa3cd411e9363b.js" crossorigin="anonymous" integrity="sha384-xg8j7ImOySIXgTyKM/z42xJCJJLVo3a/RAAXVTv6f+ZLIz0wCxWqoPMTWcPopWOR"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-76aa3cd411e9363b_bg.wasm" crossorigin="anonymous" integrity="sha384-bDx4Ptoi0ULFZLbp4NuuKgcT0VMnoWqM8t6G8FW9ovjyt1MBzVtSvOCFFHhMCt7f" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7.js" crossorigin="anonymous" integrity="sha384-MugTZxfNf4QogO1iPW4c5B27CHqMTi8sQmmgawPHZ4NV/g1o/8QPcXcn42yP7DJQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7_bg.wasm" crossorigin="anonymous" integrity="sha384-LHTFZm/1ywRsY5BqXoNIWqmo+7QaUz3HHwUyDzoL+QdnepKWHT3iaijwFHILnc8b" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
