deploy: 023dd46914d1ce9006ad5eb29c94fc19d5cbfed0

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-9b5e9d237f10f8e6.css" integrity="sha384&#x2D;g2cRO3DzrXU&#x2F;DWh75LMsrC80TpOlybI&#x2B;IoaLK8lSGgxWWLGueT6y&#x2B;TLifaht9uPP"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-49664e18d22ed2f3.css" integrity="sha384&#x2D;ax8CgHyPAeEIxmj7bc8u4Jo7qMrKR88hpxB8uPPtKBp&#x2B;Rx5wvx2nACGjOgbjbm9D"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-cda413e899693c96.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-cda413e899693c96_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7.js" crossorigin="anonymous" integrity="sha384-MugTZxfNf4QogO1iPW4c5B27CHqMTi8sQmmgawPHZ4NV/g1o/8QPcXcn42yP7DJQ"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-145523100ecd53a7_bg.wasm" crossorigin="anonymous" integrity="sha384-LHTFZm/1ywRsY5BqXoNIWqmo+7QaUz3HHwUyDzoL+QdnepKWHT3iaijwFHILnc8b" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-cda413e899693c96.js" crossorigin="anonymous" integrity="sha384-CNNL6FpicpRtJUoynw2XNI/pF+gfuxSVZhsJ/n6CGvCJCtH9yqO0O15BStlk4aby"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-cda413e899693c96_bg.wasm" crossorigin="anonymous" integrity="sha384-uJGyjFxmPFzkZgcrMPSnZePFAslk8syzdjk6P+795hlmNHdaHcPQ7e+5PYXOS1dZ" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
