deploy: 9a7fc91dce9ffaa06e917537aeebf477ccffd5b5

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-49664e18d22ed2f3.css" integrity="sha384&#x2D;ax8CgHyPAeEIxmj7bc8u4Jo7qMrKR88hpxB8uPPtKBp&#x2B;Rx5wvx2nACGjOgbjbm9D"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-8bf63933dfdd7d5c.css" integrity="sha384&#x2D;DSL3E1B9pSDt9m0jnJ9RKik18aYpI9BDexFytF&#x2F;0F3oxsrwMANhY7W560E1cx&#x2F;&#x2F;L"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-7ed327a1a277421b.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-7ed327a1a277421b_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-a945646aa8389cee.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-a945646aa8389cee_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-7ed327a1a277421b.js" crossorigin="anonymous" integrity="sha384-SKAeW2IALB8Z/XMDhCl8AM7AzITv65ILv+SfQWVLjjPDtBggulA9CcaJGjzNrr+j"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-7ed327a1a277421b_bg.wasm" crossorigin="anonymous" integrity="sha384-uJYCbwUVwC17PXkKNnvGeAzKh5rqQ7ja7n4fSVXavqZNCXRHVD7OmZTx58y8K+BD" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-a945646aa8389cee.js" crossorigin="anonymous" integrity="sha384-ko4a+ziNKrViqzYqz5CbamVaqktcoUJKzFl03I68XOMuFkjOLduiUIKHPTO4FUg6"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-a945646aa8389cee_bg.wasm" crossorigin="anonymous" integrity="sha384-NXmqVIp+X9sKAU7yuD92+GaLpbFBFhJptwrV7YDElHs4OnCkOb+Gxgskv08GrMKY" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
