--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-8bf63933dfdd7d5c.css" integrity="sha384&#x2D;DSL3E1B9pSDt9m0jnJ9RKik18aYpI9BDexFytF&#x2F;0F3oxsrwMANhY7W560E1cx&#x2F;&#x2F;L"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-31181cb50d90414e.css" integrity="sha384&#x2D;ze0ZI2wXWeNP5m8w71o1URSEQyyShT69ZpZcnOn8O&#x2B;iMV&#x2F;hwpqm5cRZwoo26KR4u"/>
         
         
 <script type="module">
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-1697a06202d1759f.js" crossorigin="anonymous" integrity="sha384-CCB/sH4Bnmg0MPdvrYsZc8dyoQY42exBHNbjvwb9EqQ6hGSR5d+6UthT5lQUR7Vx"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-1697a06202d1759f_bg.wasm" crossorigin="anonymous" integrity="sha384-IR6CQGckuAVBFyTwEMbx98gs9BBTr6Xf8yw0iJ0gKn+KWVwU63Omn9x9ZvlZa6AF" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-1697a06202d1759f.js" crossorigin="anonymous" integrity="sha384-CCB/sH4Bnmg0MPdvrYsZc8dyoQY42exBHNbjvwb9EqQ6hGSR5d+6UthT5lQUR7Vx"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-1697a06202d1759f_bg.wasm" crossorigin="anonymous" integrity="sha384-IR6CQGckuAVBFyTwEMbx98gs9BBTr6Xf8yw0iJ0gKn+KWVwU63Omn9x9ZvlZa6AF" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
