deploy: c89e27feab0476634fcd94045c48b1b77e35c0d9

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-31181cb50d90414e.css" integrity="sha384&#x2D;ze0ZI2wXWeNP5m8w71o1URSEQyyShT69ZpZcnOn8O&#x2B;iMV&#x2F;hwpqm5cRZwoo26KR4u"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-9e1e930759a79881.css" integrity="sha384&#x2D;5&#x2B;pAPSZm4uOmm6Nqz4y5SqzNEgTKzkK&#x2B;N3NYogERH9IwAnKzutLY9qu9b3S&#x2F;5g8G"/>
         
         
 <script type="module">
