deploy: 6b1f38e95f979273d625147d1ce8f6b2cdd51a32

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-299c3df20a91110a.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-299c3df20a91110a_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-299c3df20a91110a.js" crossorigin="anonymous" integrity="sha384-Mdss6Bek/wtTxox+h4ZdAFe6kHpSHMuV34p44IxaUcR7cPpl5esFh1yOFzEel6nk"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/ton_wallet.js" crossorigin="anonymous" integrity="sha384-ei6pxan2mvtNDUZiw3hYP/n6deADbee3pWcjT9fARNIMKLK3wJigryNQuQ3i8B/Q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-299c3df20a91110a_bg.wasm" crossorigin="anonymous" integrity="sha384-Ib4tDHtDUnktwif4upy8iu+bbZmdHK9mcvcbzUh+WjuFego7fARZkg1yFKgWmFL9" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c.js" crossorigin="anonymous" integrity="sha384-uObbV3z7ydE7tpWdYGMO5nzGlZHcw7ackPVfnw4haOb2nfOrE7z1bDx0xzGu9IQ3"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c_bg.wasm" crossorigin="anonymous" integrity="sha384-xW+MrgpNKC/z9ouiojVcYspKxpZ3YCy40mQx9AL55Gm3Hc3espk+Hm9Qerpk4ZjW" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
