--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-9e1e930759a79881.css" integrity="sha384&#x2D;5&#x2B;pAPSZm4uOmm6Nqz4y5SqzNEgTKzkK&#x2B;N3NYogERH9IwAnKzutLY9qu9b3S&#x2F;5g8G"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-3425375345973bd5.css" integrity="sha384&#x2D;L1oBTN&#x2B;i8CJ0M3YHz7kAHUXQhm69&#x2F;hv7MR5gFLRewjvR5uVqVOgYRg0EqC5Q0tWG"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c.js" crossorigin="anonymous" integrity="sha384-uObbV3z7ydE7tpWdYGMO5nzGlZHcw7ackPVfnw4haOb2nfOrE7z1bDx0xzGu9IQ3"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-86a4055f2ddf914c_bg.wasm" crossorigin="anonymous" integrity="sha384-xW+MrgpNKC/z9ouiojVcYspKxpZ3YCy40mQx9AL55Gm3Hc3espk+Hm9Qerpk4ZjW" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461.js" crossorigin="anonymous" integrity="sha384-K/OLYF/rHKReYosUdWyxgKhdnRm8bDNX/zOBDXIOiLBfwQjPqBbydeF9mdCHvvBt"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461_bg.wasm" crossorigin="anonymous" integrity="sha384-LZgH5tAOBRRMLLNRvdZZ8cN4MFEB48RK9ZrQHNdyMshL26sLYPmaNKx+KP2+Xx98" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
