deploy: 28107aff6d5f4db05beb550e6e2bf74438c3bd31

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-3425375345973bd5.css" integrity="sha384&#x2D;L1oBTN&#x2B;i8CJ0M3YHz7kAHUXQhm69&#x2F;hv7MR5gFLRewjvR5uVqVOgYRg0EqC5Q0tWG"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-1a4fb6cee2786ad2.css" integrity="sha384&#x2D;uypqqOOmvosZegajinCoETeKPJUINroIU&#x2B;9gHT2zuKt6pdFv7PxSBm1DpRnFb91m"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ba5a3d895bf1c16f.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ba5a3d895bf1c16f_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461.js" crossorigin="anonymous" integrity="sha384-K/OLYF/rHKReYosUdWyxgKhdnRm8bDNX/zOBDXIOiLBfwQjPqBbydeF9mdCHvvBt"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ff6c19ff3d5b7461_bg.wasm" crossorigin="anonymous" integrity="sha384-LZgH5tAOBRRMLLNRvdZZ8cN4MFEB48RK9ZrQHNdyMshL26sLYPmaNKx+KP2+Xx98" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ba5a3d895bf1c16f.js" crossorigin="anonymous" integrity="sha384-+5Wto2v2tms/iNmSKUD9C4m8+Zy6S4UNQuhmDGenoSYfKTrENGGe67C4QDXXoS4t"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ba5a3d895bf1c16f_bg.wasm" crossorigin="anonymous" integrity="sha384-ZatEZFHwS7ETwc2VYrPho+eDz2pYtDshG+y3vKdOkf2uelDhroQhZ1zW/MPetzpf" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
