--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-398876e12320bc06.css" integrity="sha384&#x2D;0JCxo29IKrwcdAuPltQRClTmbJN7MKvOHWHb1GGN5C8NwlE&#x2B;r77LgimyitzpDv5t"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-c2a6245568112192.css" integrity="sha384&#x2D;hZB1uKliNy2phwU&#x2F;2TCYu&#x2F;wDwCCw0cCc7bfpuq7VsNL5iFOXsioy8QDgWkOQlsW7"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-381b8c6ff461eb0b.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-381b8c6ff461eb0b_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-381b8c6ff461eb0b.js" crossorigin="anonymous" integrity="sha384-eGA2hcN7sa3byK8wjVOiAbuBEK0KiZWcaO1H1W5qfB94dwQ6OOnFOTYHTQuwNELR"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-381b8c6ff461eb0b_bg.wasm" crossorigin="anonymous" integrity="sha384-gEGvKbCNgZtBkuVIIlx1YsMzinVQSWbG8bx92ejWpKWMuPhcvmBOkCpDjkwzp/HZ" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715.js" crossorigin="anonymous" integrity="sha384-+mnxQr/Z4O5YzfW3QpNjkp6GafQ2fftgYt1UUXoPuSNSk4xWMzso5hnaNsEn7Muk"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715_bg.wasm" crossorigin="anonymous" integrity="sha384-YPsfp/JSnjDlj8oID5c66lym6wc05GM7WAlXe8ayavVanCURdoQu3UUGmzNNGv4D" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
