--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-c2a6245568112192.css" integrity="sha384&#x2D;hZB1uKliNy2phwU&#x2F;2TCYu&#x2F;wDwCCw0cCc7bfpuq7VsNL5iFOXsioy8QDgWkOQlsW7"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-c2cd352a728193f0.css" integrity="sha384&#x2D;XIFeZp9wNGPob0z4FgXvi5UPdN&#x2B;Ozr9wYar&#x2F;732yBMJPpLiRd3eW8TQmkWlUCa60"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715.js" crossorigin="anonymous" integrity="sha384-+mnxQr/Z4O5YzfW3QpNjkp6GafQ2fftgYt1UUXoPuSNSk4xWMzso5hnaNsEn7Muk"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ccb63fb6a52a7715_bg.wasm" crossorigin="anonymous" integrity="sha384-YPsfp/JSnjDlj8oID5c66lym6wc05GM7WAlXe8ayavVanCURdoQu3UUGmzNNGv4D" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf.js" crossorigin="anonymous" integrity="sha384-zQZ8CpU3NTIJI325hX0mB7Kdn8ayyCPMxOoPIYUw4PHh3jhR3Ev94P0KZEbLU/Jm"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf_bg.wasm" crossorigin="anonymous" integrity="sha384-4bCOEdvuWkHfHrQEHytKKeZ44MPZrypGDkbLzUoQu5rShF6niMkCq52lk++TUBjv" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
