deploy: f2702697c7590e74dc7cb6c9556790cc9543d0cb

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-c2cd352a728193f0.css" integrity="sha384&#x2D;XIFeZp9wNGPob0z4FgXvi5UPdN&#x2B;Ozr9wYar&#x2F;732yBMJPpLiRd3eW8TQmkWlUCa60"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-94dcf96e6ba53130.css" integrity="sha384&#x2D;bbbY2z6DVqYRhod5qaBi9JlC&#x2B;4uYe72O7A&#x2B;PCStFmAt8JeHI4&#x2F;bsvVx&#x2B;xXDpZNoN"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf.js" crossorigin="anonymous" integrity="sha384-zQZ8CpU3NTIJI325hX0mB7Kdn8ayyCPMxOoPIYUw4PHh3jhR3Ev94P0KZEbLU/Jm"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-e9ccdc2ab1c22caf_bg.wasm" crossorigin="anonymous" integrity="sha384-4bCOEdvuWkHfHrQEHytKKeZ44MPZrypGDkbLzUoQu5rShF6niMkCq52lk++TUBjv" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78.js" crossorigin="anonymous" integrity="sha384-fWv6NxNywRsHovrqZVt9DLML6a9y88NQLENlAWsmIAPEL1o6NGt01u7gbbWbffWy"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78_bg.wasm" crossorigin="anonymous" integrity="sha384-KQURfhfaXiGfZmsKlq16QRph30+befxCheLf8Czy3uvryuT7ERzKkqv8uVYBS5XH" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
