deploy: dcff5a25058b9fcdb3d16e504d04f737802dfc31

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-94dcf96e6ba53130.css" integrity="sha384&#x2D;bbbY2z6DVqYRhod5qaBi9JlC&#x2B;4uYe72O7A&#x2B;PCStFmAt8JeHI4&#x2F;bsvVx&#x2B;xXDpZNoN"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-72ed00882b311c14.css" integrity="sha384&#x2D;&#x2F;aNIFLGrapzHxVlxQgGuocVPipyxNzAQ4iC6leovolc7taIT1bk&#x2F;FiutrEuqr2a0"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-36000d0cf821f125.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-36000d0cf821f125_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78.js" crossorigin="anonymous" integrity="sha384-fWv6NxNywRsHovrqZVt9DLML6a9y88NQLENlAWsmIAPEL1o6NGt01u7gbbWbffWy"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-1eb10de0e6fdbc78_bg.wasm" crossorigin="anonymous" integrity="sha384-KQURfhfaXiGfZmsKlq16QRph30+befxCheLf8Czy3uvryuT7ERzKkqv8uVYBS5XH" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-36000d0cf821f125.js" crossorigin="anonymous" integrity="sha384-lYr2QWa+TsoGzxx1EbMjyVPfcp7whgAHg2TZChHArwG5esSaa6ApMAUnhFxrw5qb"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-36000d0cf821f125_bg.wasm" crossorigin="anonymous" integrity="sha384-TQdYUH4s5b6CdP9MltInwv2sSQth6HE4Xxm7YoHfycFA9Q4DBELi4kBNqcLY6k8i" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
