deploy: 6331f463391a37087f53a8f1bcfd8fbafb3ff1b3

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-14164a9eeb1b48bb.css" integrity="sha384&#x2D;QbMhIaW6B4gnGr0LL8LfU0mNkQdXv3h17s12tlYOFAYxKSsSfUKkgFKCw4TGLLkN"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-20eac41145d9bb59.css" integrity="sha384&#x2D;9vR5VTWlJv6qEQw5OZ3&#x2F;YQsR6qo&#x2B;&#x2F;LvyLCMoam&#x2F;7fhk5&#x2B;JrY2RL6aoVdznguZS5P"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-95833d98d7eed7aa.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-95833d98d7eed7aa_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-9fb126e51913e069.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-9fb126e51913e069_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-95833d98d7eed7aa.js" crossorigin="anonymous" integrity="sha384-oUeV8UvmV+BwRFCZ8Vs+IjZufcvhieLgkRJvzOY4FUetyLJxapfUfedh0RIOncol"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-95833d98d7eed7aa_bg.wasm" crossorigin="anonymous" integrity="sha384-Cy60QLjWHXG34vydrv7Q1zwHZb0h3x1Tep0xWChUDUA3VVckhTHWVtT5ecY43YnG" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-9fb126e51913e069.js" crossorigin="anonymous" integrity="sha384-4HmbESFH6DkW3gj88LF2dxaeFBh0Sb3VPBGfDqkcfNDhRSAXPhAmjYTBC5qAHRC9"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-9fb126e51913e069_bg.wasm" crossorigin="anonymous" integrity="sha384-nxlLcHso1479s/3PBJUnQ+TUSapkQH5+vks1qky739NPLKdx+jIKk5nxPQBvm6vP" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
