deploy: e2078738a9ab17f73c17f4854f63cdc42d4694d3

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-20eac41145d9bb59.css" integrity="sha384&#x2D;9vR5VTWlJv6qEQw5OZ3&#x2F;YQsR6qo&#x2B;&#x2F;LvyLCMoam&#x2F;7fhk5&#x2B;JrY2RL6aoVdznguZS5P"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-fbe79b9bc53ce309.css" integrity="sha384&#x2D;rNFu9iRMkhCtuaDTPsC5W7&#x2F;&#x2B;MBCuZMjHzG56JBq1NotBdg2uWUhut2l9ZooyyOJi"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-c22a51e89fb0831.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-c22a51e89fb0831_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-2a809caefca9aabd.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-2a809caefca9aabd_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-c22a51e89fb0831.js" crossorigin="anonymous" integrity="sha384-4qk1ksOoLieq1/stC997iP+lc+CGMSxamvCPaGPzSVI7a8g52HLpwUVmcmRwiKVD"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-c22a51e89fb0831_bg.wasm" crossorigin="anonymous" integrity="sha384-SMafgCZzJjdPPFv7LEwTNX8U1ocrWfprV+XoVQnMttcqgShGm5loZwZPLOC5y+C4" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-2a809caefca9aabd.js" crossorigin="anonymous" integrity="sha384-8D4d79Dpf7C+KsweLFmRk1/bHpuJDyotF32i1ZEg0p2waATCTJtRIc10uZx4Zxko"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-2a809caefca9aabd_bg.wasm" crossorigin="anonymous" integrity="sha384-58NN+d5gW8HBpnl9WWkH+iu1pnTzPNg0uJbOBZBM88UQopQ9DvBqE5sYuvgHwK09" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
