--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-fbe79b9bc53ce309.css" integrity="sha384&#x2D;rNFu9iRMkhCtuaDTPsC5W7&#x2F;&#x2B;MBCuZMjHzG56JBq1NotBdg2uWUhut2l9ZooyyOJi"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-2fefea5d66cbd17e.css" integrity="sha384&#x2D;Sy2SBAR1vjLBNJMXh49scwugikVXs5ZTiCZxNUnaKeEzRk3l03gpW34txryEcZuO"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b7f5197e502e6377.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b7f5197e502e6377_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-7079d106769743f7.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-7079d106769743f7_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b7f5197e502e6377.js" crossorigin="anonymous" integrity="sha384-8D4d79Dpf7C+KsweLFmRk1/bHpuJDyotF32i1ZEg0p2waATCTJtRIc10uZx4Zxko"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b7f5197e502e6377_bg.wasm" crossorigin="anonymous" integrity="sha384-Gqn4NJ8UeVdTDILM9x7Ya73I1AsoGC03aJwczsXTeB9LcL2/iIxHMfU7G80/X7R2" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-7079d106769743f7.js" crossorigin="anonymous" integrity="sha384-tueYilotSIGgRGNaJtsqwUCym9x7tKWKc+aiPOZAUZvZlFTG3m7bUlkObshQOBHY"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-7079d106769743f7_bg.wasm" crossorigin="anonymous" integrity="sha384-lupwjellTzJOtjpBOJW1anZqYJwLKP/FSyh/6imzUaf1siO5aulgESOwb8mLl968" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
