deploy: 465b854d61b908cc055d8ec0f809d1264272681b

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-61893f328df20661.css" integrity="sha384&#x2D;DBBazZGJOCAUMwDbA9&#x2F;6P49kO8QcuYr2&#x2F;0ZdagOiSwX9W51BoGSAD2h3sy3FVmw&#x2B;"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-ae6c43ff27b0e764.css" integrity="sha384&#x2D;WdJGnC&#x2B;Yy7BDqYJV2XNpAbwpHZfxSjYm1FZjc7QAg8&#x2B;69wMKIsWmQuUfRkOY5pHj"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b36977a8de35b20b.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b36977a8de35b20b_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-e542d9a127da8930.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-e542d9a127da8930_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b36977a8de35b20b.js" crossorigin="anonymous" integrity="sha384-WXCPKhUjjrCkd0Qdd3z6axID2qoLOIjjIsUXz5v8SZTT0vprwJeld6mwA/aMbV9q"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b36977a8de35b20b_bg.wasm" crossorigin="anonymous" integrity="sha384-bnzVzmiuAD0UuDDJdA3+A3YM8warlkz5PQmhgBxts40tTJrAZJFEoGDTjmUfhqec" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-e542d9a127da8930.js" crossorigin="anonymous" integrity="sha384-SC4EAfZsxhiJ9TM9VHKRpZeosfEJnU5xqhvQGCvnb4m2fNvzTGcVgBmPJcKCfqJN"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-e542d9a127da8930_bg.wasm" crossorigin="anonymous" integrity="sha384-hg4fdDDM3sJyK7D5gRsjpHZD6oeKxkxmr8zl+eSZYynT3G9mgNwtvJ3Hjw5YrniG" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
