--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link data-trunk rel="scss" href="scss/main.scss" />
+        <link data-trunk rel="tailwind-css" href="styles/index.css" />
         <link data-trunk rel="copy-dir" href="src/assets" />
         <link
             data-trunk
