--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link data-trunk rel="tailwind-css" href="styles/index.css" />
+        <link data-trunk rel="tailwind-css-extra" href="styles/index.css" />
         <link data-trunk rel="copy-dir" href="src/assets" />
         <link
             data-trunk
@@ -14,5 +14,5 @@
         />
     </head>
 
-    <body class="theme-light"></body>
+    <body data-theme="light"></body>
 </html>
