--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/index-8715022622f57981.css" integrity="sha384&#x2D;D8dMvHKEkQmwyqElyadzSb7fDRAqabqHLdm33ZCI0eauUD3vN&#x2B;XjOHSxKhPJdAVo"/>
+        <link rel="stylesheet" href="/konnektoren-yew/main-80484fe17b9208d1.css" integrity="sha384&#x2D;l4H37xPbUEjUu051ac8kX6nnOUqGAAiaAmqH&#x2B;7eMz7HBPfg6nX1paKAg1RZF1UMJ"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-ff2c974fe87ed3ce.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-ff2c974fe87ed3ce_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-b96f77a254c72b56.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-b96f77a254c72b56_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-ff2c974fe87ed3ce.js" crossorigin="anonymous" integrity="sha384-qWNLI93RnKhrnatyyePNjykOt8nqsOPa7PIujZAATG2qtuxF3d3VfxjoGXp4JWlb"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-ff2c974fe87ed3ce_bg.wasm" crossorigin="anonymous" integrity="sha384-kfPQAlWfo0k8Xt+HJ5RLv1FavlVZk7W4L1gjA1NGdLinsWQJ8a+NKb8xKbfVYW7r" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-b96f77a254c72b56.js" crossorigin="anonymous" integrity="sha384-qWNLI93RnKhrnatyyePNjykOt8nqsOPa7PIujZAATG2qtuxF3d3VfxjoGXp4JWlb"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-b96f77a254c72b56_bg.wasm" crossorigin="anonymous" integrity="sha384-iFVwOdveh1qo1lTzQu6F0Sj3BgWP0ihUAHNtMqek1/RfOjSbcRGGrKsgC9XIb0cL" as="fetch" type="application/wasm"></head>
 
     <body class="theme-light"></body>
 </html>
