--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" data-theme="light">
     <head>
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
-        <link rel="stylesheet" href="/konnektoren-yew/main-80484fe17b9208d1.css" integrity="sha384-l4H37xPbUEjUu051ac8kX6nnOUqGAAiaAmqH+7eMz7HBPfg6nX1paKAg1RZF1UMJ"/>
+        <link rel="stylesheet" href="/konnektoren-yew/index-40c9a1c018d53193.css" integrity="sha384-nj0puReOOduckoLiBZDAGfBoRcJg0YqF1WayOnK1Fj48mVcsRsmgLsELYNEGdZjQ"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-5edf7a78f35770e6.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-5edf7a78f35770e6_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-9ddd760f8ae33853.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-9ddd760f8ae33853_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -17,7 +17,7 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-5edf7a78f35770e6.js" crossorigin="anonymous" integrity="sha384-qWNLI93RnKhrnatyyePNjykOt8nqsOPa7PIujZAATG2qtuxF3d3VfxjoGXp4JWlb"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-5edf7a78f35770e6_bg.wasm" crossorigin="anonymous" integrity="sha384-VQY1Won5tKJFVvupM7xTGFQLj1+XEtteF3Rp1UHjOXPO5dHSeKmjJglegKq61mfD" as="fetch" type="application/wasm"></head>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-9ddd760f8ae33853.js" crossorigin="anonymous" integrity="sha384-5CuSaG6Xh7JG5ZYKIvUkmbO6F8dp8mLZ1CQ6ZLjAmfHRfZr/XZz3i4QiM1LqMPC1"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-d3563e4e3f0dca27/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-9ddd760f8ae33853_bg.wasm" crossorigin="anonymous" integrity="sha384-ItxYaXNShacdZ/VBQlFOAvltRTCiLfYuo+bWpz+F38HtGCM5pme2tAEZ41x7HbqU" as="fetch" type="application/wasm"></head>
 
-    <body class="theme-light"></body>
+    <body></body>
 </html>
