:bug: fix font awesome

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <title>Konnektoren Yew</title>
         <link data-trunk rel="tailwind-css-extra" href="styles/index.css" />
+        <link data-trunk rel="scss" href="styles/vendors.css" />
         <link data-trunk rel="copy-dir" href="src/assets" />
         <link
             data-trunk
