:fire: removes csr from default features

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
             rel="rust"
             href="Cargo.toml"
             data-wasm-opt="0"
+            features="csr,yew-preview"
             data-bin="konnektoren-yew-bin"
         />
     </head>
