--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en" data-theme="light">
     <head>
         <meta charset="utf-8" />
-        <title>Konnektoren Yew</title>
+        <title data-ssg="title">Konnektoren Yew</title>
         <link rel="stylesheet" href="/konnektoren-yew/index-8f26056e87172643.css" integrity="sha384-16FdUXxU1/MfMs8sFEqar/JkUF+5NVElgehiD6iBzAOixN9NvIQajM+uXsYC/Ysh"/>
         <link rel="stylesheet" href="/konnektoren-yew/vendors-8883d978b5f479bd.css" integrity="sha384-s3u9J6LMHJAKVUvVw3EpFm//dvIseq6MP42yejBFQz0E6g8tlf9tA3FvY1kpX43F"/>
         
         
 <script type="module">
-import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-d3a74fa540f461f3.js';
-const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-d3a74fa540f461f3_bg.wasm' });
+import init, * as bindings from '/konnektoren-yew/konnektoren-yew-bin-bcd567381f85acda.js';
+const wasm = await init({ module_or_path: '/konnektoren-yew/konnektoren-yew-bin-bcd567381f85acda_bg.wasm' });
 
 
 window.wasmBindings = bindings;
@@ -18,7 +18,8 @@ window.wasmBindings = bindings;
 dispatchEvent(new CustomEvent("TrunkApplicationStarted", {detail: {wasm}}));
 
 </script>
-    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-d3a74fa540f461f3.js" crossorigin="anonymous" integrity="sha384-3yZiL9J4LQ0iIpZg0vUIcoNz4z7JbqFKXQDiIBxu5+pjZzsV6eAy/LMMj4rQ2Pud"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-5ae5a79dfb3a9ec7/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-d3a74fa540f461f3_bg.wasm" crossorigin="anonymous" integrity="sha384-3q+9dxwZUvW9dSRKoWBtKeKAGb6EqTVmN1ko1VoBHDc20dJzbuoKupQzsMk+1n5u" as="fetch" type="application/wasm"></head>
-
-    <body></body>
+    <link rel="modulepreload" href="/konnektoren-yew/konnektoren-yew-bin-bcd567381f85acda.js" crossorigin="anonymous" integrity="sha384-3NWbI50UXjEdjk10bm3vE+nW2IcX10cey+mFI7KdCiivYfDG8YqCebRUB4JEH+ch"><link rel="modulepreload" href="/konnektoren-yew/snippets/konnektoren-yew-5ae5a79dfb3a9ec7/src/components/marketplace/wallet/ton_wallet.js" crossorigin="anonymous" integrity="sha384-a+El+JKcj9MK8Kak0SVvYZNL73cgioA/c8l5scIcefHJPT66Fd9AZeBx1o6gnGjN"><link rel="preload" href="/konnektoren-yew/konnektoren-yew-bin-bcd567381f85acda_bg.wasm" crossorigin="anonymous" integrity="sha384-iNVrgE7ZXFxL2ZJisbeeDbiXyBRhHQ+UhdB4eNo9oUpwZ5kKR9YTutDXa/DX7hpI" as="fetch" type="application/wasm"></head>
+    <body>
+        <div id="app" data-ssg="content"></div>
+    </body>
 </html>
