--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title data-ssg="title">Konnektoren Yew</title>
         <link data-trunk rel="tailwind-css-extra" href="styles/index.css" />
         <link data-trunk rel="scss" href="styles/vendors.css" />
-        <link data-trunk rel="copy-dir" href="src/assets" />
+        <link data-trunk rel="copy-dir" href="assets" />
         <link
             data-trunk
             rel="rust"
